--- a/nginx/sites-available/isuride-php.conf
+++ b/nginx/sites-available/isuride-php.conf
@@ -13,6 +13,11 @@ server {
      try_files $uri /index.php$is_args$args;
   }
 
+  location ~ (.js|.css|.ico|.png)$ {
+    root /home/isucon/webapp/php/public/;
+    add_header Cache-Control "public; max-age=31536000";
+  }
+
   location = /index.php {
     include fastcgi_params;
     fastcgi_index index.php;
