--- a/nginx/conf.d/alp.conf
+++ b/nginx/conf.d/alp.conf
@@ -34,4 +34,4 @@ log_format combined_plus '$remote_addr - $remote_user [$time_iso8601] '
         '"$request" $status $body_bytes_sent '
         '"$http_referer" "$http_user_agent" $upstream_response_time $request_time';
 
-access_log /var/log/nginx/access.jsonl.gz json gzip=9 flush=3s;
+access_log /dev/null ltsv;
